@@ -1,3 +1,7 @@
+2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* libttf/pclt.c: Repalce "%02hx" => "%02x" for unsigned char.
+
 2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.
